kustomize/vote/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  labels:
    app: vote
    tier: front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote
      tier: front
  template:
    metadata:
      labels:
        app: vote
        tier: front
    spec:
      containers:
        - name: vote
          image: schoolofdevops/vote:v1
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
