kustomize/vote/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app: vote
    tier: front
spec:
  type: NodePort
  selector:
    app: vote
    tier: front
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30001
      protocol: TCP
